--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Name Picker</title>
+	<title>OTS Raffle Picker</title>
 	<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>	
 	<script src = 'js/jquery-ui-1.8.23.custom.min.js'></script>
 	<script type="text/javascript" src="js/names.js"></script>	
